Added header section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
 </head>
 
 <body>
-   <header>
+   <header class="section has-background-link py-4 has-text-white">
+      <div class="container">
+         <div class="columns">
+            <div class="column">
+               <span> <i class="fa fa-envelope"></i> </span>
+               company-email@gmail.com
+            </div>
+            <div class="column has-text-centered-tablet">
+               <span> <i class="fa fa-phone"></i> </span>
+               +44-5465625-546
+            </div>
+            <div class="column has-text-right-tablet">
+               <span> <i class="fa fa-headphones"></i> </span>
+               Support
+            </div>
+         </div>
+      </div>
    </header>
 
    <main>
