Added hero section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,17 @@
    </header>
 
    <main>
-      <section>
+      <section class="section" id="hero">
+         <div class="container">
+            <div class="columns has-text-centered">
+               <div class="column is-half-tablet">
+                  <h1 class="title has-text-white">Hello</h1>
+                  <p class="subtitle has-text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id velit
+                     natus blanditiis!</p>
+                  <a href="#" class="button is-danger has-text-white">Get to know our company</a>
+               </div>
+            </div>
+         </div>
       </section>
 
       <section>
