Added services section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body>
-   <header class="section has-background-link py-4 has-text-white">
+   <header class="section has-background-dark py-4 has-text-white">
       <div class="container">
          <div class="columns">
             <div class="column">
@@ -61,15 +61,179 @@
                   <h1 class="title has-text-white">Hello</h1>
                   <p class="subtitle has-text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id velit
                      natus blanditiis!</p>
-                  <a href="#" class="button is-danger has-text-white">Get to know our company</a>
+                  <a href="#" class="button is-link has-text-white">Get to know our company</a>
                </div>
             </div>
          </div>
       </section>
 
-      <section>
-         <article></article>
-         <aside></aside>
+      <section class="section" id="services">
+         <div class="container">
+            <div class="columns">
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-code"></i>
+                        </span>
+                        <p class="title is-4">
+                           Web Development
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-paint-brush"></i>
+                        </span>
+                        <p class="title is-4">
+                           Web Design
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-server"></i>
+                        </span>
+                        <p class="title is-4">
+                           Web Hosting
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-mobile-phone"></i>
+                        </span>
+                        <p class="title is-4">
+                           Mobile Development
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+            </div>
+            <div class="columns">
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-bar-chart"></i>
+                        </span>
+                        <p class="title is-4">
+                           SEO Boost
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-dashboard"></i>
+                        </span>
+                        <p class="title is-4">
+                           Marketing
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-dollar"></i>
+                        </span>
+                        <p class="title is-4">
+                           Sales funnes
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+               <div class="column has-text-centered">
+                  <div class="card">
+                     <div class="card-content">
+                        <span class="icon is-size-3 py-6 my-3">
+                           <i class="fa fa-cog"></i>
+                        </span>
+                        <p class="title is-4">
+                           Maintenance
+                        </p>
+                        <div class="content">
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
+                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                        </div>
+                     </div>
+                     <footer class="card-footer">
+                        <a href="#" class="card-footer-item">Learn more</a>
+                     </footer>
+                  </div>
+               </div>
+            </div>
+            <div class="field is-flex service-buttons is-grouped mt-5">
+               <p class="control">
+                  <button class="button is-dark">Free consultation</button>
+               </p>
+               <p class="control">
+                  <button class="button is-primary">Request pricing</button>
+               </p>
+            </div>
+         </div>
       </section>
    </main>
 
