Added contact section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <!-- Google fonts (https://fonts.google.com) Or Comment out -->
    <link
       href="https://fonts.googleapis.com/css2?family=Caladea&family=Ewert&family=Josefin+Sans:ital,wght@1,300;1,400&family=Montserrat+Alternates:ital,wght@0,400;1,600&family=Vesper+Libre&display=swap"
-      rel="stylesheet">
+      rel="stylesheet" />
 
    <!-- Ionic icons Or Other Sites Icons Or Comment out -->
    <!-- <link rel="stylesheet" href="" /> -->
@@ -59,8 +59,10 @@
             <div class="columns has-text-centered">
                <div class="column is-half-tablet">
                   <h1 class="title has-text-white">Hello</h1>
-                  <p class="subtitle has-text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id velit
-                     natus blanditiis!</p>
+                  <p class="subtitle has-text-white">
+                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id
+                     velit natus blanditiis!
+                  </p>
                   <a href="#" class="button is-link has-text-white">Get to know our company</a>
                </div>
             </div>
@@ -76,12 +78,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-code"></i>
                         </span>
-                        <p class="title is-4">
-                           Web Development
-                        </p>
+                        <p class="title is-4">Web Development</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -95,12 +96,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-paint-brush"></i>
                         </span>
-                        <p class="title is-4">
-                           Web Design
-                        </p>
+                        <p class="title is-4">Web Design</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -114,12 +114,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-server"></i>
                         </span>
-                        <p class="title is-4">
-                           Web Hosting
-                        </p>
+                        <p class="title is-4">Web Hosting</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -133,12 +132,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-mobile-phone"></i>
                         </span>
-                        <p class="title is-4">
-                           Mobile Development
-                        </p>
+                        <p class="title is-4">Mobile Development</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -154,12 +152,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-bar-chart"></i>
                         </span>
-                        <p class="title is-4">
-                           SEO Boost
-                        </p>
+                        <p class="title is-4">SEO Boost</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -173,12 +170,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-dashboard"></i>
                         </span>
-                        <p class="title is-4">
-                           Marketing
-                        </p>
+                        <p class="title is-4">Marketing</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -192,12 +188,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-dollar"></i>
                         </span>
-                        <p class="title is-4">
-                           Sales funnes
-                        </p>
+                        <p class="title is-4">Sales funnes</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -211,12 +206,11 @@
                         <span class="icon is-size-3 py-6 my-3">
                            <i class="fa fa-cog"></i>
                         </span>
-                        <p class="title is-4">
-                           Maintenance
-                        </p>
+                        <p class="title is-4">Maintenance</p>
                         <div class="content">
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus minima, minus
-                           quisquam praesentium nostrum unde facilis atque excepturi a.
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                           Pariatur accusamus minima, minus quisquam praesentium
+                           nostrum unde facilis atque excepturi a.
                         </div>
                      </div>
                      <footer class="card-footer">
@@ -235,38 +229,91 @@
             </div>
          </div>
       </section>
+
+      <section class="section" id="contact">
+         <div class="container">
+            <div class="columns">
+               <!-- contact form -->
+               <div class="column">
+                  <div class="card">
+                     <header class="card-header has-background-warning">
+                        <p class="card-header-title">Free consultation</p>
+                     </header>
+                     <div class="card-content">
+                        <div class="field">
+                           <label for="name" class="label">Names</label>
+                           <p class="control">
+                              <input class="input" name="name" type="text" placeholder="Enter your names" />
+                           </p>
+                        </div>
+                        <div class="field">
+                           <label for="phone" class="label">Phone number</label>
+                           <p class="control">
+                              <input class="input" name="phone" type="text" placeholder="Enter your phone number" />
+                           </p>
+                        </div>
+                        <div class="field">
+                           <label for="email" class="label">Email</label>
+                           <p class="control">
+                              <input class="input" name="email" type="email" placeholder="Enter your email" />
+                           </p>
+                        </div>
+                        <div class="field">
+                           <p class="control">
+                              <button class="button is-warning mb-3 is-pulled-right">
+                                 Submit
+                              </button>
+                           </p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- quotes -->
+               <div class="column has-text-white pt-6 pl-6 quotes">
+                  <span class="icon is-size-2 has-text-grey-lighter pb-3 my-3">
+                     <i class="fa fa-quote-left" aria-hidden="true"></i>
+                  </span>
+                  <p class="is-size-4">
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore
+                     at voluptatum, enim maiores natus soluta hic sed cum voluptatem
+                     deserunt?
+                  </p>
+                  <p class="pt-2 is-size-3">John Doe.</p>
+                  <span class="icon is-size-2 has-text-grey-lighter pt-6 my-3 is-pulled-right">
+                     <i class="fa fa-quote-right" aria-hidden="true"></i>
+                  </span>
+               </div>
+            </div>
+         </div>
+      </section>
    </main>
 
    <footer></footer>
 
    <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', () => {
-
+      document.addEventListener("DOMContentLoaded", () => {
          // Get all "navbar-burger" elements
-         const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+         const $navbarBurgers = Array.prototype.slice.call(
+            document.querySelectorAll(".navbar-burger"), 0
+         );
 
          // Check if there are any navbar burgers
          if ($navbarBurgers.length > 0) {
-
             // Add a click event on each of them
-            $navbarBurgers.forEach(el => {
-               el.addEventListener('click', () => {
-
+            $navbarBurgers.forEach((el) => {
+               el.addEventListener("click", () => {
                   // Get the target from the "data-target" attribute
                   const target = el.dataset.target;
                   const $target = document.getElementById(target);
 
                   // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-                  el.classList.toggle('is-active');
-                  $target.classList.toggle('is-active');
-
+                  el.classList.toggle("is-active");
+                  $target.classList.toggle("is-active");
                });
             });
          }
-
       });
    </script>
-
 </body>
 
 </html>
